[package]
name = "mqttui"
version = "0.1.0"
edition = "2021"
description = "A fast, tree-based MQTT explorer built with Rust and egui"
license = "MIT"
authors = ["mqttui contributors"]

[dependencies]
# GUI
eframe = { version = "0.29", features = ["persistence"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["all_loaders"] }

# MQTT
rumqttc = "0.24"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config/data storage
directories = "5"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Unique IDs
uuid = { version = "1", features = ["v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Encoding
base64 = "0.22"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
